re-wrote most of the ortho module.  still need to finish it, but I am on the right track.

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -37,8 +37,8 @@ RUN_TYPE=RECTIFY
 #  NOTE:  in RUN_TYPE=BUILD,   this will be the image name for the created file
 #         in RUN_TYPE=RECTIFY, this is the file which will be loaded.  Note: This must exist in the filesystem
 #         in RUN_TYPE=FULL,    this will act according to RUN_TYPE=BUILD
-IMAGE_FILENAME=data/test.ntf
-#IMAGE_FILENAME=data/modified_image.jpg
+#IMAGE_FILENAME=data/test.ntf
+IMAGE_FILENAME=data/modified_image.jpg
 
 
 
@@ -78,15 +78,15 @@ DEM_NAME=data/dem.png
 USE_GEOIMAGE_CAMERA_PARAMS=False
 
 # Camera Intrinsics
-CAMERA_FOCAL_LENGTH=0.125
+CAMERA_FOCAL_LENGTH=0.1
 
 # Camera Plane Dimensions
-CAMERA_PLANE_WIDTH= 1.0
-CAMERA_PLANE_HEIGHT=1.0
+CAMERA_PLANE_WIDTH= 0.1
+CAMERA_PLANE_HEIGHT=0.1
 
 # Camera Rotation Parameters
 CAMERA_ROTATION_ANGLE=45
-CAMERA_ROTATION_AXIS=1, 0, 0
+CAMERA_ROTATION_AXIS=-1, 0, 0
 
 # Camera Scene Extrinsics
 CAMERA_WORLD_POSITION= 0.0, 0.0, 1000.0
