fixed ortho code sans dem correction

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -78,11 +78,11 @@ DEM_NAME=data/dem.png
 USE_GEOIMAGE_CAMERA_PARAMS=False
 
 # Camera Intrinsics
-CAMERA_FOCAL_LENGTH=0.1
+CAMERA_FOCAL_LENGTH=1
 
 # Camera Plane Dimensions
-CAMERA_PLANE_WIDTH= 0.1
-CAMERA_PLANE_HEIGHT=0.1
+CAMERA_PLANE_WIDTH= 1
+CAMERA_PLANE_HEIGHT=1
 
 # Camera Rotation Parameters
 CAMERA_ROTATION_ANGLE=45
@@ -103,7 +103,7 @@ BUILD_IMAGE_COLS=1000
 BUILD_IMAGE_TYPE=CV_8UC3
 
 # Z Buffering
-BUILD_WITH_3D=True
+BUILD_WITH_3D=False
 
 ###################################################
 #               RECITIFY  PARAMETERS              #
