adding a single test image to use in computations

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -37,8 +37,8 @@ RUN_TYPE=RECTIFY
 #  NOTE:  in RUN_TYPE=BUILD,   this will be the image name for the created file
 #         in RUN_TYPE=RECTIFY, this is the file which will be loaded.  Note: This must exist in the filesystem
 #         in RUN_TYPE=FULL,    this will act according to RUN_TYPE=BUILD
-#IMAGE_FILENAME=data/test.ntf
-IMAGE_FILENAME=data/modified_image.jpg
+IMAGE_FILENAME=data/test.ntf
+#IMAGE_FILENAME=data/modified_image.jpg
 
 
 
