--- a/geographic/geo_image/src/core/CMakeLists.txt
+++ b/geographic/geo_image/src/core/CMakeLists.txt
@@ -4,5 +4,5 @@ configure_file(
     "${PROJECT_BINARY_DIR}/src/core/GeoImage_Version.hpp"
 )
 
-install (FILES "${PROJECT_BINARY_DIR}/src/core/GeoImage_Version.hpp"  DESTINATION "include/GeoImage/core" )
+install (FILES "${PROJECT_BINARY_DIR}/src/core/GeoImage_Version.hpp" DESTINATION "include/geoimage/core" )
 
