--- a/geographic/geo_image/src/utilities/CMakeLists.txt
+++ b/geographic/geo_image/src/utilities/CMakeLists.txt
@@ -1,5 +1,8 @@
 
-set( UTILITY_SOURCES "src/utilities/File_Utilities.cpp" PARENT_SCOPE )
+set( UTILITY_SOURCES 
+        "src/utilities/File_Utilities.cpp"
+        "src/utilities/String_Utilities.cpp"
+        PARENT_SCOPE )
 
 install (FILES File_Utilities.hpp  DESTINATION "include/geoimage/utilities" )
 
