--- a/geographic/geo_image/src/core/CMakeLists.txt
+++ b/geographic/geo_image/src/core/CMakeLists.txt
@@ -4,5 +4,11 @@ configure_file(
     "${PROJECT_BINARY_DIR}/src/core/GeoImage_Version.hpp"
 )
 
+configure_file( 
+    "GeoImage_Version.hpp.in"
+    "${PROJECT_SOURCE_DIR}/src/core/GeoImage_Version.hpp"
+)
+
 install (FILES "${PROJECT_BINARY_DIR}/src/core/GeoImage_Version.hpp" DESTINATION "include/geoimage/core" )
+
 
