--- a/geographic/geo_image/src/CMakeLists.txt
+++ b/geographic/geo_image/src/CMakeLists.txt
@@ -6,6 +6,12 @@ install (FILES "${PROJECT_SOURCE_DIR}/src/GeoImage.hpp"  DESTINATION "include" )
 include_directories( "${PROJECT_SOURCE_DIR}/src/core"       )
 
 
+############################################################
+#   Check whether or not we are using the IO Module
+if( BUILD_DEM_MODULE )
+    add_subdirectory( dem )
+    include_directories( "${PROJECT_SOURCE_DIR}/src/dem"  )
+endif( BUILD_DEM_MODULE )
 
 
 ############################################################
@@ -42,6 +48,6 @@ endif( BUILD_IMAGE_MODULE )
 
 
 
-set( GEO_SOURCES ${GEO_SOURCES} ${EXTENSION_SOURCES} ${IMAGE_SOURCES}  ${IO_SOURCES}  ${UTILITY_SOURCES}    PARENT_SCOPE )
+set( GEO_SOURCES ${GEO_SOURCES} ${DEM_SOURCES}  ${EXTENSION_SOURCES} ${IMAGE_SOURCES}  ${IO_SOURCES}  ${UTILITY_SOURCES}    PARENT_SCOPE )
 
 
