--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -29,7 +29,7 @@ LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=RECTIFY
+RUN_TYPE=BUILD
 
 
 #  Name of the image to evaluate
@@ -37,8 +37,8 @@ RUN_TYPE=RECTIFY
 #  NOTE:  in RUN_TYPE=BUILD,   this will be the image name for the created file
 #         in RUN_TYPE=RECTIFY, this is the file which will be loaded.  Note: This must exist in the filesystem
 #         in RUN_TYPE=FULL,    this will act according to RUN_TYPE=BUILD
-IMAGE_FILENAME=data/test.ntf
-#IMAGE_FILENAME=data/modified_image.jpg
+#IMAGE_FILENAME=data/test.ntf
+IMAGE_FILENAME=data/modified_image.jpg
 
 
 
@@ -81,15 +81,15 @@ USE_GEOIMAGE_CAMERA_PARAMS=False
 CAMERA_FOCAL_LENGTH=0.5
 
 # Camera Plane Dimensions
-CAMERA_PLANE_WIDTH= 1.5
+CAMERA_PLANE_WIDTH= 1
 CAMERA_PLANE_HEIGHT=1
 
 # Camera Rotation Parameters
-CAMERA_ROTATION_ANGLE=15
+CAMERA_ROTATION_ANGLE=0
 CAMERA_ROTATION_AXIS= 1, 1, 0
 
 # Camera Scene Extrinsics
-CAMERA_WORLD_POSITION= 0.0, 0.0, 1624
+CAMERA_WORLD_POSITION= 0.0, 0.0, 2000
 
 ###################################################
 #               BUILD  PARAMETERS                 #
