Forward transform is now working in build mode

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -78,18 +78,18 @@ DEM_NAME=data/dem.png
 USE_GEOIMAGE_CAMERA_PARAMS=False
 
 # Camera Intrinsics
-CAMERA_FOCAL_LENGTH=0.5
+CAMERA_FOCAL_LENGTH=1
 
 # Camera Plane Dimensions
-CAMERA_PLANE_WIDTH= 1
-CAMERA_PLANE_HEIGHT=1
+CAMERA_PLANE_WIDTH= 2
+CAMERA_PLANE_HEIGHT=2
 
 # Camera Rotation Parameters
-CAMERA_ROTATION_ANGLE=0
-CAMERA_ROTATION_AXIS= 1, 1, 0
+CAMERA_ROTATION_ANGLE=45
+CAMERA_ROTATION_AXIS= -1, 0, 0
 
 # Camera Scene Extrinsics
-CAMERA_WORLD_POSITION= 0.0, 0.0, 2000
+CAMERA_WORLD_POSITION= 0.0, 0.0, 1000
 
 ###################################################
 #               BUILD  PARAMETERS                 #
