--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -29,7 +29,7 @@ LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=BUILD
+RUN_TYPE=RECTIFY
 
 
 #  Name of the image to evaluate
@@ -81,8 +81,8 @@ USE_GEOIMAGE_CAMERA_PARAMS=False
 CAMERA_FOCAL_LENGTH=1
 
 # Camera Plane Dimensions
-CAMERA_PLANE_WIDTH= 2
-CAMERA_PLANE_HEIGHT=2
+CAMERA_PLANE_WIDTH= 1
+CAMERA_PLANE_HEIGHT=1
 
 # Camera Rotation Parameters
 CAMERA_ROTATION_ANGLE=45
