--- a/geographic/geo_image/src/utilities/CMakeLists.txt
+++ b/geographic/geo_image/src/utilities/CMakeLists.txt
@@ -1,11 +1,13 @@
 
 set( UTILITY_SOURCES 
+        "src/utilities/DEM_Utilities.cpp"
         "src/utilities/File_Utilities.cpp"
         "src/utilities/OpenCV_Utilities.cpp"
         "src/utilities/String_Utilities.cpp"
         PARENT_SCOPE )
 
 install (FILES 
+                DEM_Utilities.hpp
                 File_Utilities.hpp  
                 OpenCV_Utilities.hpp
                 String_Utilities.hpp
