--- a/geographic/geo_image/src/utilities/CMakeLists.txt
+++ b/geographic/geo_image/src/utilities/CMakeLists.txt
@@ -2,6 +2,7 @@
 set( UTILITY_SOURCES 
         "src/utilities/DEM_Utilities.cpp"
         "src/utilities/File_Utilities.cpp"
+        "src/utilities/Math_Utilities.cpp"
         "src/utilities/OpenCV_Utilities.cpp"
         "src/utilities/String_Utilities.cpp"
         PARENT_SCOPE )
@@ -9,6 +10,7 @@ set( UTILITY_SOURCES
 install (FILES 
                 DEM_Utilities.hpp
                 File_Utilities.hpp  
+                Math_Utilities.hpp
                 OpenCV_Utilities.hpp
                 String_Utilities.hpp
          DESTINATION 
