--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -37,8 +37,8 @@ RUN_TYPE=RECTIFY
 #  NOTE:  in RUN_TYPE=BUILD,   this will be the image name for the created file
 #         in RUN_TYPE=RECTIFY, this is the file which will be loaded.  Note: This must exist in the filesystem
 #         in RUN_TYPE=FULL,    this will act according to RUN_TYPE=BUILD
-#IMAGE_FILENAME=data/test.ntf
-IMAGE_FILENAME=data/modified_image.jpg
+IMAGE_FILENAME=data/test.ntf
+#IMAGE_FILENAME=data/modified_image.jpg
 
 
 
@@ -52,7 +52,7 @@ IMAGE_FILENAME=data/modified_image.jpg
 #  - Supported Options
 #     FILE = load dem information from a specific file.  Use DEM_NAME as the file
 #     DTED = load dem information from DTED, use DEM_NAME as the root directory
-DEM_MODE=FILE
+DEM_MODE=DTED
 
 #  DEM_NAME
 #
@@ -60,8 +60,7 @@ DEM_MODE=FILE
 #         in RUN_TYPE=BUILD:   This will be the file used to save the DEM image
 #         in RUN_TYPE=RECTIFY: This is the base of the dem directory or the dem file. This must exist accordingly
 #         in RUN_TYPE=FULL:    This will follow the rules of RUN_TYPE=BUILD
-DEM_NAME=data/dem.png
-
+DEM_NAME=data/dted
 
 ###################################################
 #               CAMERA PARAMETERS                 #
@@ -85,7 +84,7 @@ CAMERA_PLANE_WIDTH= 1
 CAMERA_PLANE_HEIGHT=1
 
 # Camera Rotation Parameters
-CAMERA_ROTATION_ANGLE=45
+CAMERA_ROTATION_ANGLE=0
 CAMERA_ROTATION_AXIS= -1, 0, 0
 
 # Camera Scene Extrinsics
@@ -103,7 +102,7 @@ BUILD_IMAGE_COLS=1000
 BUILD_IMAGE_TYPE=CV_8UC3
 
 # Z Buffering
-BUILD_WITH_3D=False
+BUILD_WITH_3D=True
 
 ###################################################
 #               RECITIFY  PARAMETERS              #
