--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -77,18 +77,18 @@ DEM_NAME=data/dted
 USE_GEOIMAGE_CAMERA_PARAMS=False
 
 # Camera Intrinsics
-CAMERA_FOCAL_LENGTH=1
+CAMERA_FOCAL_LENGTH=.125
 
 # Camera Plane Dimensions
-CAMERA_PLANE_WIDTH= 1
-CAMERA_PLANE_HEIGHT=1
+CAMERA_PLANE_WIDTH= .1
+CAMERA_PLANE_HEIGHT=.1
 
 # Camera Rotation Parameters
 CAMERA_ROTATION_ANGLE=0
 CAMERA_ROTATION_AXIS= -1, 0, 0
 
 # Camera Scene Extrinsics
-CAMERA_WORLD_POSITION= 0.0, 0.0, 1000
+CAMERA_WORLD_POSITION= 38.848089, -104.778036, 6505
 
 ###################################################
 #               BUILD  PARAMETERS                 #
