--- a/misc/Project_Euler/euler61/Makefile
+++ b/misc/Project_Euler/euler61/Makefile
@@ -1,8 +1,15 @@
 
-CFLAGS=-O2
+CFLAGS=-O3
+
+BIGINT_SOURCES= \
+	../utils/BigInteger.cc \
+	../utils/BigIntegerUtils.cc \
+	../utils/BigUnsigned.cc \
+	../utils/BigUnsignedInABase.cc \
+	../utils/BigIntegerAlgorithms.cc
 
 euler61: euler61.cpp
-	g++ $< -o $@ -I../utils $(CFLAGS)
+	g++ $< -o $@ -I../utils $(CFLAGS) $(BIGINT_SOURCES)
 
 clean: 
 	rm euler61
