Adding shell of second demo.

--- a/mpi/Makefile
+++ b/mpi/Makefile
@@ -9,8 +9,11 @@ SRC=.
 #  Set our MPI path
 MPICXX=mpic++-mpich-devel-mp
 
+#  Set the Compiler Options
+CXX_OPTIONS=--std=c++11
+
 #  Set our bin list
-all: $(BIN)/boilerplate-mpi $(BIN)/mpi-dynamic-windows-01
+all: $(BIN)/boilerplate-mpi $(BIN)/mpi-dynamic-windows-01 $(BIN)/mpi-dynamic-windows-02
 
 
 #  Boilerplate Example
@@ -20,4 +23,8 @@ $(BIN)/boilerplate-mpi:$(SRC)/boilerplate-mpi.cpp
 #  Dynamic Window Example 1
 $(BIN)/mpi-dynamic-windows-01:$(SRC)/mpi-dynamic-windows-01.cpp
 	$(MPICXX) $< -o $@
+
+#  Dynamic Window Example 2
+$(BIN)/mpi-dynamic-windows-02:$(SRC)/mpi-dynamic-windows-02.cpp
+	$(MPICXX) $< -o $@ $(CXX_OPTIONS)
 
